syntax = "proto3";

package supercontractserver;

message OpenFile {
  string path = 1;
  string mode = 2;
}

message OpenFileReturn {
  bool success = 1;
  uint64 identifier = 2;
}

message WriteFileStream {
  uint64 identifier = 1;
  bytes buffer = 2;
}

message WriteFileStreamReturn {
  bool success = 1;
  uint64 num_bytes_written = 2;
}

message Flush {
  uint64 identifier = 1;
}

message FlushReturn {
  bool success = 1;
}

message ReadFileStream {
  uint64 identifier = 1;
}

message ReadFileStreamReturn {
  bool success = 1;
  bytes buffer = 2;
}

message CloseFile {
  uint64 identifier = 1;
}

message CloseFileReturn {
  bool success = 1;
}

message PathExist {
  string path = 1;
}

message PathExistReturn {
  bool exist = 1;
}

message IsFile {
  string path = 1;
}

message IsFileReturn {
  bool success = 1;
  bool is_file = 2;
}

message FileSize {
  string path = 1;
}

message FileSizeReturn {
  bool success = 1;
  uint64 file_size = 2;
}

message CreateDir {
  string path = 1;
}

message CreateDirReturn {
  bool success = 1;
}

message MoveFsEntry {
  string old_path = 1;
  string new_path = 2;
}

message MoveFsEntryReturn {
  bool success = 1;
}

message RemoveFsEntry {
  string path = 1;
}

message RemoveFsEntryReturn {
  bool success = 1;
}

message CreateDirIterator {
  string path = 1;
  bool recursive = 2;
}

message CreateDirIteratorReturn {
  bool success = 1;
  uint64 identifier = 2;
}

message HasNextIterator {
  uint64 identifier = 1;
}

message HasNextIteratorReturn {
  bool has_next = 1;
}

message NextDirIterator {
  uint64 identifier = 1;
}

message NextDirIteratorReturn {
  string name = 1;
  uint32 depth = 2;
  bool success = 3;
}

message RemoveDirIterator {
  uint64 identifier = 1;
}

message RemoveDirIteratorReturn {
  bool success = 1;
}

message DestroyDirIterator {
  uint64 identifier = 1;
}

message DestroyDirIteratorReturn {
  bool success = 1;
}